fixed app spacing

--- a/static/admin.css
+++ b/static/admin.css
@@ -46,6 +46,7 @@ body {
     flex-direction: column;
     width: 100%;
     grid-column: 2.8 / 3;
+    /* position: relative;   */
 }
 
 .group {
@@ -62,26 +63,26 @@ body {
 .apps {
     display: flex;
     flex-wrap: wrap;
-    justify-content:center;
+    justify-content: flex-start;
 }
 .app {
     margin: 15px;
     text-align: center;
-
-    position: relative;
-    width: calc((100% / 6) - 30px);  
+    width: calc(100% / 6 - 30px);  /* Adjusted to ensure 6 apps per row with margin */
     height: 100px;
-    flex: 1 0 calc((100% / 6) - 30px);
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    cursor: move; 
+    cursor: move;
+    box-sizing: border-box;
 }
+
 .app img {
     margin-top: 15px; 
     margin-bottom: 10px;
     align-items: left;
     height: 30px;
     transition: transform 0.3s ease-out;
-} 
+}
+
 .app img:hover {
     transform: scale(1.8);
 }
@@ -93,14 +94,13 @@ body {
 
 .options {
     position: relative;
-    display: inline-block;
+    top: 30px;
+    left: 100px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
     cursor: pointer;
-    bottom: 50px;
-    left: 50px;
-    width: 20px; 
-    height: 20px;  
-    border-radius: 5px;  
-
 }
 
 .options:hover{
